# codex-sub-agents

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  static.yml
codex_sub_agent/: __init__.py  agent_runtime.py  cli.py  codex_mcp_wrapper.py  config_loader.py  config_models.py  mcp_server.py  skill_loader.py  skills.py
config/: __init__.py  codex_sub_agents.toml
config/agents/: security_review.toml  test_agent.toml  workflow.toml
config/agents/security_review/: agent.toml  default_prompt.md  instructions.md
config/agents/test_agent/: agent.toml  entry_message.md  instructions.md
config/agents/workflow/: agent.toml  default_prompt.md  instructions.md
docs/: agents.md  configuration.md  how-to-guides.md  index.md  installation.md  quickstart.md  troubleshooting.md
specs/: product-requirements.md  technical-spec.md
tests/: __init__.py  conftest.py  test_agent_runtime.py  test_cli.py  test_config_loader.py  test_config_models_unit.py  test_mcp_server.py  test_skill_loader.py  test_skills.py
