[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-sub-agent"
version = "0.1.0"
description = "Reusable Codex CLI sub-agent packaged for Codex MCP workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Team", email = "dev@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "mcp>=1.20.0",
  "openai>=2.7.0",
  "openai-agents>=0.5.0",
  "pydantic>=2.12.0",
]
keywords = ["codex", "mcp", "agents", "context7", "github"]

[project.scripts]
codex-sub-agent = "codex_sub_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/codex-sub-agent"
Source = "https://github.com/example/codex-sub-agent"
Documentation = "https://github.com/example/codex-sub-agent"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.8.0",
  "pdoc>=14.4.0",
  "pytest>=8.2.0",
  "pip-audit>=2.7.3",
  "safety>=3.2.4",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["codex_sub_agent", "codex_sub_agent_config"]
include-package-data = true

[tool.setuptools.package-dir]
codex_sub_agent_config = "config"

[tool.setuptools.package-data]
"codex_sub_agent_config" = ["**/*"]
